--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "one-test": "mocha --inspect-brk test/one-test.js"
   },
   "repository": {
     "type": "git",
