--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "mocha",
-    "one-test": "mocha --inspect-brk test/one-test.js"
+    "debug-sketch": "mocha --inspect-brk p5/sketch.js",
+    "debug-tests": "mocha --inspect-brk test/test.js"
   },
   "repository": {
     "type": "git",
