--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "automachar",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
   "directories": {
     "test": "tests"
   },
+  "main": "main.js",
   "scripts": {
     "test": "mocha",
     "start": "electron .",
@@ -24,10 +24,13 @@
   "homepage": "https://github.com/dhowe/Automachar#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "electron": "^3.0.11",
     "mocha": "^5.2.0"
   },
+  "optionalDependencies": {
+    "electron": "^3.0.11"
+  },
   "dependencies": {
+    "p5": "^0.7.2",
     "update": "^0.7.4"
   }
 }
