--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "automachar",
+  "name": "autochar",
   "version": "1.0.0",
   "description": "",
   "directories": {
@@ -14,22 +14,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dhowe/Automachar.git"
+    "url": "git+https://github.com/dhowe/Autochar.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/dhowe/Automachar/issues"
+    "url": "https://github.com/dhowe/Autochar/issues"
   },
-  "homepage": "https://github.com/dhowe/Automachar#readme",
+  "homepage": "https://github.com/dhowe/Autochar#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "fast-memoize": "^2.5.1",
-    "mocha": "^5.2.0",
-    "tone": "^0.12.80"
+    "mocha": "^5.2.0"
   },
   "optionalDependencies": {
-    "electron": "^3.0.11"
+    "electron": "^3.0.11",
+    "tone": "^0.12.80"
   },
   "dependencies": {
     "fast-levenshtein": "^2.0.6",
