--- a/scripts/rotvh.app/Contents/Info.plist
+++ b/scripts/rotvh.app/Contents/Info.plist
@@ -64,11 +64,11 @@
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
-		<real>388</real>
+		<real>421</real>
 		<key>savedFrame</key>
-		<string>76 106 700 639 0 0 1024 745 </string>
+		<string>84 697 700 672 0 0 2560 1417 </string>
 		<key>selectedTab</key>
-		<string>result</string>
+		<string>description</string>
 	</dict>
 </dict>
 </plist>
