--- a/scripts/rotvh.app/Contents/Info.plist
+++ b/scripts/rotvh.app/Contents/Info.plist
@@ -64,11 +64,11 @@
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
-		<real>355</real>
+		<real>322</real>
 		<key>savedFrame</key>
-		<string>84 156 700 672 0 0 1440 877 </string>
+		<string>359 194 700 672 0 0 1920 1057 </string>
 		<key>selectedTab</key>
-		<string>result</string>
+		<string>description</string>
 	</dict>
 </dict>
 </plist>
